# topograph

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pixi.toml  pyproject.toml
.github/workflows/: tests.yml
examples/: _example_pipeline.py  balanced_tree_graph_pipeline.py  basic_pipeline.py  cave_man_graph_pipeline.py  circular_graph_pipeline.py  cubical_graph_pipeline.py  example_workflow.py  ladder_graph_pipeline.py  path_graph_pipeline.py  split_workflow.py  star_graph_pipeline.py  tadpole_graph_pipeline.py  trivial_graph_pipeline.py  wheel_graph_pipeline.py  windmill_graph_pipeline.py
src/topograph/: cli.py  examples.py
src/topograph/cli/: contour_tree.py  join_tree.py  main.py  persistence.py  run.py  simplify.py  split_tree.py
src/topographer/: __init__.py  api.py  core.py  examples.py  main.py  models.py  persistence.py  plot.py  simplify.py  trees.py
src/topographer/algorithms/: __init__.py  _merge_rules.py  augmentation.py  contour_merge.py  contour_prune.py  contour_tree.py  deaugmentation.py  join_tree.py  persistence.py  simplification.py  (+1 more)
tests/: conftest.py  test_basic_pipeline_gallery.py  test_cli.py  test_cli_tree.py  test_contour_tree.py  test_core.py  test_examples.py  test_graph_check.py  test_io.py  test_path_graph_pipeline_example.py  test_persistence.py  test_pipeline.py  test_plot.py  test_plotting_draw.py  test_plotting_layout.py  test_plotting_persistence.py  test_simplification.py  test_simplify.py  test_split_join.py  test_split_join_algorithms.py  test_trees.py  test_uniquess.py  test_workflow_contour_pipeline.py
(+23 files in other folders)
